dev service filter query
